sites/default/kubernetes/svc-mariadb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: default
  labels:
    service: mariadb
spec:
  ports:
    - name: mysql
      port: 3306
  selector:
    service: mariadb
