sites/default/kubernetes/svc-memcached.yml
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: default
  labels:
    service: memcached
spec:
  ports:
    - name: memcache
      port: 11211
  selector:
    service: memcached
  sessionAffinity: ClientIP
