sites/default/kubernetes/svc-php.yml
---
apiVersion: v1
kind: Service
metadata:
  name: php
  namespace: default
  labels:
    service: php
spec:
  ports:
    - name: php-fom
      port: 9000
  selector:
    service: php
