sites/default/kubernetes/svc-solr.yml
---
apiVersion: v1
kind: Service
metadata:
  name: solr
  namespace: default
  labels:
    service: solr
spec:
  ports:
    - name: solr
      port: 8983
  selector:
    service: solr
