sites/default/kubernetes/netpol-allow-ingress-nginx.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx
  namespace: default
spec:
  podSelector:
    matchLabels:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/part-of: ingress-nginx
            addonmanager.kubernetes.io/mode: Reconcile
