sites/default/kubernetes/netpol-allow-internal.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal
  namespace: default
spec:
  podSelector:
    matchLabels:
  ingress:
    - from:
      - podSelector: {}
