sites/default/kubernetes/netpol-allow-sshd.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-sshd
  namespace: default
spec:
  podSelector:
    matchLabels:
      service: sshd
  ingress:
    - from: []
